--- a/WebContent/static/common/jeeplus.css
+++ b/WebContent/static/common/jeeplus.css
@@ -1,5 +1,5 @@
 /*!
- * Copyright &copy; 2012-2013 <a href="http://www.jeeplus.org/">JeeSite</a> All rights reserved.
+ * Copyright &copy; 2012-2013 <a href="--版权信息--">JeeSite</a> All rights reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  */
