--- a/WebContent/static/modules/cms/front/themes/basic/style.css
+++ b/WebContent/static/modules/cms/front/themes/basic/style.css
@@ -1,5 +1,5 @@
 /*!
- * Copyright &copy; 2012-2013 <a href="http://www.jeeplus.org/">JeeSite</a> All rights reserved.
+ * Copyright &copy; 2012-2013 <a href="--版权信息--">JeeSite</a> All rights reserved.
  */
 a:link,a:visited{color:#282828;text-decoration:none;}
 a:hover,a:active{color:#ff0000;text-decoration:underline;}
